--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 /* main container */
 
 .fallingLeaves {
-    text-align: center;
+    text-align: left;
 }
 .fallingLeaves span {
     display: inline-block;
 
     width: 10px;
     height: 13px;
-	margin: -280px 80px 54px  -34px;
+	margin: 100px 100px 100px -76px;
 	background:url("CherryBlossoms 3.png");
 
     
@@ -19,8 +19,8 @@
 }
 .fallingLeaves span:nth-child(5n+5) {
 
-    -webkit-animation-delay: 1.3s;
-    -moz-animation-delay: 1.3s;
+    -webkit-animation-delay: 5.3s;
+    -moz-animation-delay: 5.3s;
 }
 .fallingLeaves span:nth-child(3n+2) {
 
