--- a/style.css
+++ b/style.css
@@ -1,19 +1,76 @@
-
-
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+}
+nav{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 75px;
+  padding: 10px 90px;
+  box-sizing: border-box;
+  background: #454238;
+  border-bottom: 3px solid #454238;
+}
+nav .logo-img{
+  float: left;
+  position: relative;
+  margin: 1px 20px 24px 5px;
+}
+nav .MW-Sig{
+  float: left;
+  position: relative;
+  Margin: 1px 20px 24px 5px;
+}
+nav .HeaderTitle{
+  float: left;
+  position: relative;
+  Margin: 5px 1px 20px 24px;
+}
+nav ul{
+  list-style: none;
+  color:#fff;
+  float: right;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+nav ul li a{
+  line-height: 50px;
+  padding: 12px 30px;
+  text-decoration: none;
+  font-size:20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+nav ul li a:hover{
+  background: rgba(0,0,0,0.7);
+  border-radius: 6px;
+}
+.cards-wrapper{
+  display: flex;
+}
+.card{
+  margin: 0 .5em 2em 0;
+}
 /* main container */
+
+h1{
+  text-align: center;
+}
 
 .fallingLeaves {
     text-align: left;
 }
 .fallingLeaves span {
     display: inline-block;
-
     width: 10px;
     height: 13px;
-    margin: 100px 100px 100px  -80px;
+    margin: 150px 100px 300px  -55px;
 
 	background:url("CherryBlossoms 3.png");
-
     
     -webkit-animation: fallingLeaves 10s infinite  linear;
     -moz-animation: fallingLeaves 10s infinite  linear;
