--- a/style.css
+++ b/style.css
@@ -3,28 +3,36 @@ body{
   padding: 0;
   font-family: Arial;
 }
+
+.navbar {
+	position: fixed;
+}
+
 nav{
   position: fixed;
   top:0;
   left:0;
   width:100%;
-  height: 75px;
+  height: 55px;
   padding: 10px 90px;
   box-sizing: border-box;
   background: #454238;
-  border-bottom: 3px solid #454238;
+  border-bottom: 1px solid #454238;
 }
 nav .logo-img{
+  position: fixed;
   float: left;
   position: relative;
-  margin: 15px 20px 15px 5px;
+  margin: 15px 3x 15px 5px;
 }
 nav .HamburgerMenuBar{
+  position: fixed;
   float: left;
   position: relative;
   Margin: 10px 20px 20px 5px;
 }
 nav .HeaderTitle{
+  position: fixed;
   float: left;
   position: relative;
   Margin: 15px 1px 15px 24px;
@@ -68,7 +76,7 @@ h1{
     display: inline-block;
     width: 10px;
     height: 13px;
-    margin: 150px 100px 300px  -55px;
+    margin: 120px 100px 300px  -70px;
 
 	background:url("CherryBlossoms 3.png");
     
