--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@ body{
   font-family: Arial;
 }
 
-.navbar {
-	position: fixed;
-}
 
 nav{
   position: fixed;
@@ -14,10 +11,10 @@ nav{
   left:0;
   width:100%;
   height: 55px;
-  padding: 10px 90px;
+  padding: 5% 5%;
   box-sizing: border-box;
   background: #454238;
-  border-bottom: 1px solid #454238;
+  border-bottom: solid #454238;
 }
 nav .logo-img{
   position: fixed;
@@ -61,7 +58,7 @@ nav ul li a:hover{
   display: flex;
 }
 .card{
-  margin: 0 .5em 2em 0;
+  margin: 0 .5em 1em 0;
 }
 /* main container */
 
